# recipe-cliper

./: .env.example  .gitignore  LICENSE  README.md  SPEC.md  docker-compose.yml
.github/workflows/: deploy.yml
agents/notion_agent/: Dockerfile  agent_card.json  main.py  notion_handler.py  pyproject.toml
agents/recipe_agent/: Dockerfile  agent_card.json  main.py  pyproject.toml  recipe_extractor.py
agents/youtube_agent/: Dockerfile  agent_card.json  main.py  pyproject.toml
frontend/: Dockerfile  README.md  main.py  pyproject.toml
frontend/static/css/: style.css
frontend/static/js/: main.js
frontend/templates/: index.html  login.html
tests/: integration_test.py
