[tool.poetry]
name = "recipe-cliper-frontend"
version = "0.1.0"
description = "Recipe Cliper Frontend - YouTubeレシピ自動保存ツールのWebインターフェース"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "2.3.3"
requests = "2.31.0"
python-dotenv = "1.0.0"
Werkzeug = "2.3.7"
waitress = "2.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
