[tool.poetry]
name = "recipe-cliper-youtube-agent"
version = "0.1.0"
description = "Recipe Cliper YouTube Agent - 動画からの字幕抽出"
readme = "README.md"
packages = [{include = "agent"}]

[tool.poetry.dependencies]
python = "^3.12"  # Dockerfileのバージョンと合わせる
Flask = "^3.0.0"
youtube-transcript-api = "^0.6.2"
yt-dlp = ">=2025.3.31"
google-generativeai = "^0.5.0"
python-dotenv = "^1.0.0"
waitress = "^2.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 